--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -11,7 +11,7 @@
     background-color: #fff;
     overflow: hidden;
     box-shadow: 0 7px 30px -10px rgba(150,170,180,0.5);
-    border-radius: 0.3rem;
+    border-radius: var(--border-radius);
     position: relative;
 
     transition: 0.5s ease;
