--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -9,7 +9,9 @@
     --light-yellow: #f7ea89;
     --yellow: #fedf81;
     --blue: #2B2A87;
+
     --page-margin: 5vw;
+    --border-radius: 0.3rem;
 }
 
 .original {
